# Backends

./: README.md  cleanall.sh  init.sql  runstat.sh
nodeBackend/: .gitignore  Dockerfile  docker-compose.yml  index.js  package-lock.json  package.json
rocketBackend/: Cargo.toml  Dockerfile  docker-compose.yml
rocketBackend/src/: main.rs
springBackend/: Dockerfile  docker-compose.yml  pom.xml
springBackend/src/main/java/com/example/springbackend/controller/: ActivityController.java
springBackend/src/main/java/com/example/springbackend/model/: Activity.java  NewActivity.java
springBackend/src/main/java/com/example/springbackend/repository/: ActivityRepository.java
springBackend/src/main/resources/: application.properties
springBackend/src/main/resources/static/: index.html
