[package]
name = "rocketBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "uuid" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
    "serde",
]
